Fix: Fix overlapping of "buy now" teaser with logo
On medium size screens, the "buy now" teaser on Saas
would overlap with the logo. The fix makes the logo
sooner smaller when decreasing the screen size so
that there is always enough space between the logo
and the search field for the teaser button.

--- a/frontend/src/global_styles/layout/_top_menu.sass
+++ b/frontend/src/global_styles/layout/_top_menu.sass
@@ -257,7 +257,7 @@ $hamburger-width: 50px
   #logo
     display: none
 
-
-@media only screen and (max-width: 1000px)
+// Decrease logo size so that the "Buy now" teaser still fits into the empty space to the right of it.
+@media only screen and (max-width: 1200px)
   #logo
     max-width: 100px
